Made Heavy changes in order to deploy signup, signup page floated.  Made changes in service classes namely PincodeService, AuthService and OtpService to manage this.  Also made changes in the entity classes response classes namely UserResponse and PincodeApiResponse and finally edited SignupRequest to achieve this.